# bazel-python-coverage

./: .gitignore  README.md  WORKSPACE  tasks.py
python/: BUILD.bazel  requirements.txt  requirements_lock.txt
python/src/: add.py  main.py
python/tests/: run_pytest.py  test_add.py
python/tests-boto3/: run_pytest.py  test_boto3.py
